[package]
name = "kv-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs"
path = "src/bin/server.rs"
[[bin]]
name = "kvc"
path = "src/bin/client.rs"

[dependencies]
bytes = "1.2"
prost = "0.10"
tracing = "0.1"
dashmap = "5.4"
thiserror = "1.0"
http = "0.2"
sled = "0.34"
flate2 = "1.0"
tokio = { version = "1", features = ["full" ] } # 异步网络库
tracing-subscriber = "0.3"
anyhow = "1"

[dev-dependencies]
async-prost = "0.4"
futures = "0.3"
tempfile = "3.3"
tokio-util = { version = "0.7.4", features = ["codec"] }

[build-dependencies]
prost-build = "0.11"
